<resources>
    <string name="app_name">Juice Tracker</string>
    <string name="juice_type">Type of juice</string>
    <string name="delete">Delete</string>
    <string name="juice_name">Juice Name</string>
    <string name="juice_description">Description</string>
    <string name="juice_rating">Rating</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="juice_color">Color</string>

    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="cyan">Cyan</string>
    <string name="yellow">Yellow</string>
    <string name="magenta">Magenta</string>
</resources>