<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />
    <TextView
        android:id="@+id/header_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/juice_type"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintTop_toBottomOf="@+id/guideline_top"
        app:layout_constraintEnd_toStartOf="@+id/guideline_middle"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"/>
    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/header_title"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/tvJuiceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/juice_name"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        android:layout_marginTop="16dp"/>
    <EditText
        android:id="@+id/etJuiceName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="@id/tvJuiceName"
        app:layout_constraintBottom_toBottomOf="@id/tvJuiceName"
        app:layout_constraintStart_toEndOf="@id/tvJuiceName"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"/>
    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/juice_description"
        app:layout_constraintTop_toBottomOf="@id/tvJuiceName"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        android:layout_marginTop="32dp"/>
    <EditText
        android:id="@+id/etDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="@id/tvDescription"
        app:layout_constraintBottom_toBottomOf="@id/tvDescription"
        app:layout_constraintStart_toEndOf="@id/tvDescription"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"/>
    <TextView
        android:id="@+id/tvColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/juice_color"
        app:layout_constraintTop_toBottomOf="@id/tvDescription"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        android:layout_marginTop="32dp"/>
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        app:layout_constraintStart_toEndOf="@id/tvColor"
        app:layout_constraintTop_toTopOf="@id/tvColor"
        app:layout_constraintBottom_toBottomOf="@id/tvColor"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"/>
    <TextView
        android:id="@+id/tvRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/juice_rating"
        app:layout_constraintTop_toBottomOf="@id/tvColor"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        android:layout_marginTop="32dp"/>
    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="@id/tvRating"
        app:layout_constraintStart_toEndOf="@id/tvRating"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"/>
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/ratingBar"
        app:layout_constraintEnd_toEndOf="@id/guideline_middle"/>
    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="@id/guideline_middle"
        app:layout_constraintTop_toBottomOf="@id/ratingBar"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"/>
</androidx.constraintlayout.widget.ConstraintLayout>